enlazada la app con Parse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string-array name="opcionesSpinner">
+        <item>Estatal</item>
+        <item>Privado</item>
+    </string-array>
 </resources>
