--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,20 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="textoSpinner">Eliga el tipo de documento del que desea realizar la consulta</string>
+    <string name="txt_sisben">Documento:</string>
+    <string name="txt_r_civil">Registro Civil</string>
+    <string name="txt_cedula">Cédula</string>
+    <string name="txt_antecedentes">Antecedentes</string>
+    <string name="txt_cedula_e">Cédula de extranjería</string>
+    <string name="txt_libreta">Libreta Militar</string>
+    <string name="txt_t_identidad">Tarjeta de Identidad</string>
+    <string name="txt_pasaporte">Pasaporte</string>
     <string-array name="opcionesSpinner">
         <item>Elija la opción</item>
         <item>Estatal</item>
         <item>Privado</item>
     </string-array>
+    <color name="color_btn">#478c8c</color>
+    <color name="color_blanco">#ffffff</color>
+    <string name="title_activity_activity_documentos">activity_documentos</string>
 </resources>
